--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.1.0",
+    "electron-db": "^0.15.7",
     "french-badwords-list": "^1.0.5"
   },
   "repository": {
